21-04/Files/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web-deployment
spec:
 replicas: 3
 selector:
   matchLabels:
     app: web-app
 template:
   metadata:
     labels:
       app: web-app
   spec:
     containers:
     - name: nginx
       image: nginx:latest
       ports:
       - containerPort: 80
     - name: multitool
       image: wbitt/network-multitool:latest
       ports:
       - containerPort: 8080
