21-04/Files/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-nodeport
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - name: nginx-port
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
